--- a/application.html
+++ b/application.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Careers</title>
+   <title>Application</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -131,39 +131,89 @@
              <!-- Start Align Area -->
            	<div class="whole-wrap">
            		<div class="container box_1170">
-           			<div class="section-top-border">
-           				<h3 class="mb-30">Current Openings</h3>
-           				<div class="row">
-           					<div class="col-md-4">
-           						<div class="single-defination">
-           							<h4 class="mb-20">Based Director In-Flight Services</h4>
-           							<p>Will lead a team of approximately 300 flight attendants, administrative support personnel and leadership team. The candidate must be a composed, approachable, and visible leader with the skill to build high performing teams through inclusion, consensus and creativity.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
-                      </div>
-           					</div>
-           					<div class="col-md-4">
-           						<div class="single-defination">
-           							<h4 class="mb-20">Airport Customer Service</h4>
-           							<p>You will join a service team focused on listening to, caring for and connecting with customers. You will answer calls in an efficient, courteous manner, while assessing customer needs and offering solutions and additional products.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
-                      </div>
-           					</div>
-           					<div class="col-md-4">
-           						<div class="single-defination">
-           							<h4 class="mb-20">Aircraft Support Technician</h4>
-           							<p>You’ll be part of the crew that helps maintain the proper and safe functioning of Delta’s fleet, ensuring customers have an exceptional travel experience. The Cabin classification work independently or as a team to accomplish tasks, and may assist Aircraft Maintenance Technicians in technical or non-technical functions related to aircraft interiors.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
-                      </div>
-           					</div>
-                    <div class="col-md-4">
-                      <div class="single-defination">
-                        <h4 class="mb-20">Flight Service Coordinator</h4>
-                        <p>Assist with the various Airport Customer Service internal consulting activities including gathering and analyzing information, formulating and testing hypotheses, developing and communicating recommendations, developing measurement systems, preparing for implementing process improvements and assisting in change management.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
-                      </div>
-                    </div>
-           				</div>
-           			</div>
+                <div class="section-top-border">
+          				<div class="row">
+          					<div class="col-lg-8 col-md-8">
+          						<h3 class="mb-30">Form Element</h3>
+          						<form action="#">
+          							<div class="mt-10">
+          								<input type="text" name="first_name" placeholder="First Name"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'" required
+          									class="single-input">
+          							</div>
+          							<div class="mt-10">
+          								<input type="text" name="last_name" placeholder="Last Name"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'" required
+          									class="single-input">
+          							</div>
+          							<div class="mt-10">
+          								<input type="text" name="last_name" placeholder="Last Name"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'" required
+          									class="single-input">
+          							</div>
+          							<div class="mt-10">
+          								<input type="email" name="EMAIL" placeholder="Email address"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" required
+          									class="single-input">
+          							</div>
+          							<div class="input-group-icon mt-10">
+          								<div class="icon"><i class="fa fa-thumb-tack" aria-hidden="true"></i></div>
+          								<input type="text" name="address" placeholder="Address" onfocus="this.placeholder = ''"
+          									onblur="this.placeholder = 'Address'" required class="single-input">
+          							</div>
+          							<div class="input-group-icon mt-10">
+          								<div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
+          								<div class="form-select" id="default-select"">
+          											<select>
+          												<option value=" 1">City</option>
+          									<option value="1">Dhaka</option>
+          									<option value="1">Dilli</option>
+          									<option value="1">Newyork</option>
+          									<option value="1">Islamabad</option>
+          									</select>
+          								</div>
+          							</div>
+          							<div class="input-group-icon mt-10">
+          								<div class="icon"><i class="fa fa-globe" aria-hidden="true"></i></div>
+          								<div class="form-select" id="default-select"">
+          											<select>
+          												<option value=" 1">Country</option>
+          									<option value="1">Bangladesh</option>
+          									<option value="1">India</option>
+          									<option value="1">England</option>
+          									<option value="1">Srilanka</option>
+          									</select>
+          								</div>
+          							</div>
+
+          							<div class="mt-10">
+          								<textarea class="single-textarea" placeholder="Message" onfocus="this.placeholder = ''"
+          									onblur="this.placeholder = 'Message'" required></textarea>
+          							</div>
+          							<!-- For Gradient Border Use -->
+          							<!-- <div class="mt-10">
+          										<div class="primary-input">
+          											<input id="primary-input" type="text" name="first_name" placeholder="Primary color" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Primary color'">
+          											<label for="primary-input"></label>
+          										</div>
+          									</div> -->
+          							<div class="mt-10">
+          								<input type="text" name="first_name" placeholder="Primary color"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Primary color'" required
+          									class="single-input-primary">
+          							</div>
+          							<div class="mt-10">
+          								<input type="text" name="first_name" placeholder="Accent color"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Accent color'" required
+          									class="single-input-accent">
+          							</div>
+          							<div class="mt-10">
+          								<input type="text" name="first_name" placeholder="Secondary color"
+          									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Secondary color'"
+          									required class="single-input-secondary">
+          							</div>
+          						</form>
+          					</div>
            			</div>
            			</div>
            	<!-- End Align Area -->
