--- a/flights.html
+++ b/flights.html
@@ -131,6 +131,15 @@
                     </div>
                 </div>
                 <!--/ bradcam_area  -->
+                <!-- Start Sample Area -->
+              	<section class="sample-text-area">
+              		<div class="container box_1170">
+              			<h3 class="text-heading">Details</h3>
+              			<p class="sample-text">
+              				All of our flights are departing out of <b>Cincinnati/Northern Kentucky International Airport (CVG)</b>.
+              			</p>
+              		</div>
+              	</section>
     <div class="section-top-border">
       <div class="progress-table-wrap">
         <div class="progress-table">
@@ -139,95 +148,54 @@
             <div class="country">Destination</div>
             <div class="visit">Departing Time</div>
             <div class="percentage">Flight #</div>
-            <div class="percentage">Arrival Time</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Chicago</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-1" role="progressbar" style="width: 80%"
-                  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">08:01 AM</div>
+            <div class="percentage">SL0102</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Atlanta</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-2" role="progressbar" style="width: 30%"
-                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">10:33 AM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Los Angeles</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-3" role="progressbar" style="width: 55%"
-                  aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">01:43 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">New York</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-4" role="progressbar" style="width: 60%"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">02:07 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Washington</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-5" role="progressbar" style="width: 40%"
-                  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">04:38 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Las Veges</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-6" role="progressbar" style="width: 70%"
-                  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">06:47 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Orlando</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-7" role="progressbar" style="width: 30%"
-                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">08:55 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Miami</div>
-            <div class="visit">645032</div>
-            <div class="percentage">
-              <div class="progress">
-                <div class="progress-bar color-8" role="progressbar" style="width: 60%"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            <div class="visit">09:20 PM</div>
+            <div class="percentage">SL0103</div>
           </div>
         </div>
       </div>
