--- a/careers.html
+++ b/careers.html
@@ -138,28 +138,28 @@
            						<div class="single-defination">
            							<h4 class="mb-20">Based Director In-Flight Services</h4>
            							<p>Will lead a team of approximately 300 flight attendants, administrative support personnel and leadership team. The candidate must be a composed, approachable, and visible leader with the skill to build high performing teams through inclusion, consensus and creativity.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
+                        <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
            					</div>
            					<div class="col-md-4">
            						<div class="single-defination">
            							<h4 class="mb-20">Airport Customer Service</h4>
            							<p>You will join a service team focused on listening to, caring for and connecting with customers. You will answer calls in an efficient, courteous manner, while assessing customer needs and offering solutions and additional products.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
+                        <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
            					</div>
            					<div class="col-md-4">
            						<div class="single-defination">
            							<h4 class="mb-20">Aircraft Support Technician</h4>
            							<p>You’ll be part of the crew that helps maintain the proper and safe functioning of Delta’s fleet, ensuring customers have an exceptional travel experience. The Cabin classification work independently or as a team to accomplish tasks, and may assist Aircraft Maintenance Technicians in technical or non-technical functions related to aircraft interiors.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
+                        <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
            					</div>
                     <div class="col-md-4">
                       <div class="single-defination">
                         <h4 class="mb-20">Flight Service Coordinator</h4>
                         <p>Assist with the various Airport Customer Service internal consulting activities including gathering and analyzing information, formulating and testing hypotheses, developing and communicating recommendations, developing measurement systems, preparing for implementing process improvements and assisting in change management.</p>
-                        <a href="#" class="genric-btn danger">Apply</a>
+                        <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
                     </div>
            				</div>
