--- a/careers.html
+++ b/careers.html
@@ -151,7 +151,7 @@
            					<div class="col-md-4">
            						<div class="single-defination">
            							<h4 class="mb-20">Aircraft Support Technician</h4>
-           							<p>You’ll be part of the crew that helps maintain the proper and safe functioning of Delta’s fleet, ensuring customers have an exceptional travel experience. The Cabin classification work independently or as a team to accomplish tasks, and may assist Aircraft Maintenance Technicians in technical or non-technical functions related to aircraft interiors.</p>
+           							<p>You’ll be part of the crew that helps maintain the proper and safe functioning of SkyLink’s fleet, ensuring customers have an exceptional travel experience. The Cabin classification work independently or as a team to accomplish tasks, and may assist Aircraft Maintenance Technicians in technical or non-technical functions related to aircraft interiors.</p>
                         <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
            					</div>
