--- a/flights.html
+++ b/flights.html
@@ -151,49 +151,49 @@
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Chicago</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Chicago <B>(CHI)</b></div>
             <div class="visit">08:01 AM</div>
             <div class="percentage">SL0102</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Atlanta</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Atlanta <B>(ATL)</b></div>
             <div class="visit">10:33 AM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Los Angeles</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Los Angeles<B>(LAX)</b></div>
             <div class="visit">01:43 PM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">New York</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">New York <B>(NYC)</b></div>
             <div class="visit">02:07 PM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Washington</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Washington D.C.<B>(WAS)</b></div>
             <div class="visit">04:38 PM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Las Veges</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Las Veges<B>(ATL)</b></div>
             <div class="visit">06:47 PM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Orlando</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Orlando<B>(ATL)</b></div>
             <div class="visit">08:55 PM</div>
             <div class="percentage">SL0103</div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
-            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Miami</div>
+            <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Miami<B>(ATL)</b></div>
             <div class="visit">09:20 PM</div>
             <div class="percentage">SL0103</div>
           </div>
