--- a/careers.html
+++ b/careers.html
@@ -136,7 +136,7 @@
            				<div class="row">
            					<div class="col-md-4">
            						<div class="single-defination">
-           							<h4 class="mb-20">Based Director In-Flight Services</h4>
+           							<h4 class="mb-20">Base Director In-Flight Services</h4>
            							<p>Will lead a team of approximately 300 flight attendants, administrative support personnel and leadership team. The candidate must be a composed, approachable, and visible leader with the skill to build high performing teams through inclusion, consensus and creativity.</p>
                         <a href="application.html" class="genric-btn danger">Apply</a>
                       </div>
