--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@ l<!doctype html>
                                     <nav>
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">flights</a></li>
-                                            <li><a href="#">Information <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                        <li><a href="about.html">Hotels</a></li>
-                                                        <li><a href="property_details.html">Car Rentals</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a class="active" href="index.html">flight information</a></li>
                                             <li><a href="careers.html">Careers</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
