--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ l<!doctype html>
                                     <nav>
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">flights</a></li>
-                                            <li><a class="active" href="index.html">flight information</a></li>
+                                            <li><a href="index.html">flight information</a></li>
                                             <li><a href="careers.html">Careers</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
