--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ l<!doctype html>
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="index.html">flights</a></li>
+                                            <li><a class="active" href="index.html">home</a></li>
                                             <li><a href="flights.html">flight information</a></li>
                                             <li><a href="careers.html">Careers</a></li>
                                             <li><a href="contact.html">Contact</a></li>
