--- a/application.html
+++ b/application.html
@@ -82,13 +82,8 @@
                                     <div class="main-menu  d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">
-                                                <li><a class="active" href="index.html">flights</a></li>
-                                                <li><a href="#">Information <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                            <li><a href="about.html">Hotels</a></li>
-                                                            <li><a href="property_details.html">Car Rentals</a></li>
-                                                    </ul>
-                                                </li>
+                                                <li><a class="active" href="index.html">home</a></li>
+                                                <li><a href="flights.html">flight information</a></li>
                                                 <li><a href="careers.html">Careers</a></li>
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
