--- a/flights.html
+++ b/flights.html
@@ -143,54 +143,79 @@
             <div class="country">Destination</div>
             <div class="visit">Departing Time</div>
             <div class="percentage">Flight #</div>
+            <div class="percentage"></div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Chicago <B>(CHI)</b></div>
             <div class="visit">08:01 AM</div>
             <div class="percentage">SL0102</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Atlanta <B>(ATL)</b></div>
             <div class="visit">10:33 AM</div>
             <div class="percentage">SL0103</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Los Angeles<B>(LAX)</b></div>
             <div class="visit">01:43 PM</div>
             <div class="percentage">SL0104</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">New York <B>(NYC)</b></div>
             <div class="visit">02:07 PM</div>
             <div class="percentage">SL0105</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Washington D.C.<B>(WAS)</b></div>
             <div class="visit">04:38 PM</div>
             <div class="percentage">SL0106</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Las Veges<B>(ATL)</b></div>
             <div class="visit">06:47 PM</div>
             <div class="percentage">SL0107</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Orlando<B>(ATL)</b></div>
             <div class="visit">08:55 PM</div>
             <div class="percentage">SL0108</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
           <div class="table-row">
             <div class="serial">02/25/2020</div>
             <div class="country"> <img src="img/elements/f2.jpg" alt="flag">Miami<B>(ATL)</b></div>
             <div class="visit">09:20 PM</div>
             <div class="percentage">SL0109</div>
+            <div class="percentage">
+            <a href="#" class="genric-btn danger">Book</a>
+            </div>
           </div>
         </div>
       </div>
